# cryptomata

./: README.md
.github/workflows/: cd.yml  ci.yml  publish.yml
benchmark/: Cargo.toml
circuit_macro/src/: codegen.rs  constants.rs  expression.rs  lib.rs
compute/: Cargo.toml
compute/src/: uint.rs
compute/src/operations/circuits/: builder.rs  types.rs
server/: Cargo.toml
