[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
compute = { path = "../compute" }
tfhe = { version = "0.10.0", features = [ "boolean", "shortint", "integer" ] }

[dev-dependencies]
criterion = "0.7" # Use Criterion for stable benchmarking

[[bench]]
name = "benchmarks"
harness = false
