[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
compute = { path = "../compute" }
tfhe = { version = "1.3.3", features = [ "boolean", "shortint", "integer" ] }

[dev-dependencies]
criterion = "0.5" # Use Criterion for stable benchmarking

[[bench]]
name = "benchmarks"
harness = false
