[package]
name = "compute"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
circuit_macro = { path = "../circuit_macro" }
tracing = { workspace = true, features = ["log"] }
anyhow = { workspace = true }
tandem = { git = "https://github.com/sine-fdn/tandem.git", rev = "5cc26854310508a6d68d106b91716f072495a629" }
garble_lang = { version = "0.5.0", features = ["serde"] }
rand = "0.8.3"
rand_chacha = "0.3.1"
blake3 = { version = "1.6.0", features = ["traits-preview"] }
curve25519-dalek = { version = "4.1.1", features = ["rand_core"] }
bincode = "1.3"
hex = "0.4.3"
once_cell = "1.20.3"

tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
quinn = "0.11"
rcgen = "0.13.2"
bytes = "1.9.0"
ruint = "1.13.1"
